--- a/styles.css
+++ b/styles.css
@@ -272,10 +272,10 @@ html {
 }
 
 /* 
-    ///////////////////////////////////////////////////////////
-    //Section
-    //Section of CV General
-    ///////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+//Section
+//Section of CV General
+////////////////////////////////////////////////////////////////
 */
 .section {
     max-width: 1200px;
@@ -293,26 +293,25 @@ html {
     font-family: 'monserrat-extraBold', sans-serif;
     font-size: 32px;
     color: var(--color-blue-dark);
+    margin-bottom: 32px;
     padding: 1rem;
     border-bottom: 3px solid var(--color-blue-ligth);
 }
 
-.section__img {
+/* .section__img {
     width: 100px;
     height: auto;
     margin: 0 auto 1rem;
-}
+} */
 
 .section__ul {
-    margin-left: 50px;
-    padding: 1rem;
-    padding-bottom: 0;
+    margin-left: 32px;
 }
 
 .section__li {
     font-family: 'monserrat-Regular', sans-serif;
     font-size: 1rem;
-    margin-bottom: 30px;
+    margin-bottom: 32px;
 }
 
 @media (min-width: 736px) {
@@ -322,7 +321,6 @@ html {
 }
 
 .section__p {
-    margin-left: 50px;
     padding: 1rem;
     font-family: 'monserrat-Regular', sans-serif;
     line-height: 24px;
@@ -335,10 +333,6 @@ html {
     }
 }
 
-.about .section__li {
-    list-style: none;
-}
-
 /* It Help whit length text, how a email */
 @media (max-width: 380px) {
     .small {
@@ -347,30 +341,160 @@ html {
 }
 
 /* 
-    ///////////////////////////////////////////////////////////
-    //Section
-    //Section of CV Portfolio
-    ///////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+//Section About / Acerca
+////////////////////////////////////////////////////////////////
 */
-.portfolio__li {
-    display: flex;
+
+
+/* 
+////////////////////////////////////////////////////////////////
+//Section education / Educacion
+////////////////////////////////////////////////////////////////
+*/
+
+
+/* 
+////////////////////////////////////////////////////////////////
+//Section tecnologi / Tecnologias
+////////////////////////////////////////////////////////////////
+*/
+
+
+/* 
+////////////////////////////////////////////////////////////////
+//Section skills / Habilidades
+////////////////////////////////////////////////////////////////
+*/
+
+
+/* 
+////////////////////////////////////////////////////////////////
+//Section Portfolio
+////////////////////////////////////////////////////////////////
+*/
+.section-slide {
+    display: grid;
+    grid-template-columns: 1fr;
+    /* grid-auto-rows: 250px; */
+    grid-gap: 16px;
 }
 
-.portfolio__a {
-    margin-right: 20px;
-    color: var(--color-blue-dark);
-    font-size: 2rem;
+@media (min-width: 736px) {
+    .section-slide {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
-.portfolio__p {
-    line-height: 1.6rem;
+@media(min-width: 1024px) {
+    .section-slide {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 /* 
-    ///////////////////////////////////////////////////////////
-    //Section
-    //Section of CV contact-data
-    ///////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+//Section Portfolio / Portafolio
+//  Card Projects
+////////////////////////////////////////////////////////////////
+*/
+.card {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    background-color: #eee;
+    overflow: hidden;
+    transition: all .3s ease-in;
+}
+
+.card:hover {
+    transform: scale(1.01);
+}
+
+/* 
+////////////////////////////////////////////////////////////////
+//Section Portfolio / Portafolio
+//  Card barra Portfolio
+////////////////////////////////////////////////////////////////
+*/
+.card-barra {
+    position: relative;
+    height: 16px;
+    background-color: #222;
+}
+
+.barra__circle,
+.barra__circle::after,
+.barra__circle::before {
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 10px;
+    margin: auto;
+    border-radius: 50%;
+    background-color: red;
+}
+
+.barra__circle::before {
+    content: '';
+    left: 20px;
+    background-color: orange;
+}
+
+.barra__circle::after {
+    content: '';
+    background-color: green;
+    left: 40px;
+}
+
+.barra__title {
+    text-align: center;
+    color: #eee;
+    font-family: sans-serif;
+    font-size: 12px;
+}
+
+/* 
+////////////////////////////////////////////////////////////////
+//Section Portfolio / Portafolio
+//  Card Content Portfolio
+////////////////////////////////////////////////////////////////
+*/
+.card__img {
+    width: 100%;
+    height: auto;
+}
+
+.card-content {
+    padding: 16px;
+    color: black;
+    font-family: 'monserrat-Bold', cursive;
+}
+
+.card__h5 {
+    font-size: 16px;
+    font-family: 'monserrat-Bold', sans-serif;
+    font-variant: small-caps;
+}
+
+.card__p {
+    font-size: 14px;
+    padding: 8px 0 8px 8px;
+}
+
+.card__list {
+    list-style: none;
+    padding: 8px 0 8px 8px;
+    font-size: 14px;
+}
+
+/* 
+////////////////////////////////////////////////////////////////
+//Section contact-data / Contacto
+////////////////////////////////////////////////////////////////
 */
 .contact-data {
     width: 100%;
