--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,34 @@ html {
 
 /* 
     ///////////////////////////////////////////////////////////
+    //General
+    ///////////////////////////////////////////////////////////
+*/
+h1 {
+    position: relative;
+    font-size: 32px;
+    color: white;
+    font-family: 'monserrat-extraBold', sans-serif;
+    font-weight: bolder;
+    text-align: center;
+}
+
+h2 {
+    font-family: 'monserrat-extraBold', sans-serif;
+    font-size: 32px;
+    color: var(--color-blue-dark);
+    margin-bottom: 32px;
+    padding: 1rem;
+    border-bottom: 3px solid var(--color-blue-ligth);
+}
+
+h3 {
+    font-family: 'monserrat-extraBold', sans-serif;
+    font-size: 24px;
+    color: var(--color-blue-dark);
+}
+/* 
+    ///////////////////////////////////////////////////////////
     //Header
     //Header of CV
     ///////////////////////////////////////////////////////////
@@ -75,7 +103,6 @@ html {
 .img-2 {
     max-width: 100%;
     width: auto;
-    /* height: 100%; */
     height: calc(100% - 64px);
     position: absolute;
     top: 64px;
@@ -89,16 +116,6 @@ html {
     .img-2 {
         transform: translate(15%);
     }
-}
-
-.h1 {
-    position: relative;
-    font-size: 32px;
-    color: white;
-    font-family: 'monserrat-extraBold', sans-serif;
-    font-weight: bolder;
-    text-align: center;
-    padding: 1rem;
 }
 
 .header__p {
@@ -122,19 +139,13 @@ html {
     bottom: 0;
     left: 0;
     right: 0;
-    /* margin: auto; */
-    /* width: 90vw;
-    height: 90vh; */
-    /* border-radius: 5px; */
     z-index: 999;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background-color: var(--color-blue-dark); */
     background-color: var(--color-mode-black);
     box-shadow: 0px 0px 4px var(--color-blue-dark);
-    /* transform: translate(-110%); */
     transition: all .5s ease;
 
 }
@@ -180,10 +191,6 @@ html {
     transition: all .3s ease;
 }
 
-.nav__a-selected{
-    color: var(--color-marron);
-}
-
 .nav__i {
     margin-right: 10px;
 }
@@ -199,25 +206,17 @@ html {
 .nav__button {
     width: 50px;
     height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border: none;
     outline: none;
     position: fixed;
     top: 10px;
     right: 10px;
     border-radius: 50%;
-    padding: .6rem;
     background: white;
-    display: flex;
     font-size: 24px;
     color: var(--color-blue-dark);
     transition: all .3s ease;
     z-index: 1000;
-}
-
-.nav__button:hover {
     cursor: pointer;
 }
 
@@ -265,12 +264,7 @@ html {
     }
 
     .nav__a {
-        display: flex;
         color: var(--color-mode-black);
-    }
-
-    .nav__a-selected{
-        color: var(--color-marron);
     }
 
     .nav__a-opacity {
@@ -297,20 +291,9 @@ html {
     padding: 1rem;
 }
 
-.section__h2 {
-    font-family: 'monserrat-extraBold', sans-serif;
-    font-size: 32px;
-    color: var(--color-blue-dark);
-    margin-bottom: 32px;
-    padding: 1rem;
-    border-bottom: 3px solid var(--color-blue-ligth);
+.section-sm {
+    min-height: 55vh;
 }
-
-/* .section__img {
-    width: 100px;
-    height: auto;
-    margin: 0 auto 1rem;
-} */
 
 .section__ul {
     margin-left: 32px;
@@ -381,22 +364,34 @@ html {
 //Section Portfolio
 ////////////////////////////////////////////////////////////////
 */
-.section-slide {
+.section-galery {
     display: grid;
     grid-template-columns: 1fr;
     /* grid-auto-rows: 250px; */
     grid-gap: 16px;
 }
 
+.g-sm{
+    grid-template-columns: 1fr 1fr;
+}
+
 @media (min-width: 736px) {
-    .section-slide {
+    .section-galery {
         grid-template-columns: 1fr 1fr;
+    }
+
+    .g-sm{
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media(min-width: 1024px) {
-    .section-slide {
+    .section-galery {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .g-sm{
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
@@ -703,6 +698,7 @@ html {
     width: 100%;
     background-color: var(--color-mode-black);
     box-shadow: 1px 0px 1px #1C1E2C;
+    z-index: 1;
 }
 
 .content-title{
@@ -714,6 +710,12 @@ html {
     line-height: 64px;
     text-align: center;
     font-family: 'monserrat-extraBold', sans-serif;
+}
+
+@media (max-width:768px) {
+    .project-title{ 
+        font-size: 24px;
+    }
 }
 
 /* ---------------- Nav ---------------- */
@@ -736,8 +738,6 @@ html {
 }
 
 .project-button-close{
-    *outline: none;
-    *border: none;
     position: absolute;
     top: 16px;
     right: 16px;
@@ -749,11 +749,20 @@ html {
     color: var(--color-mode-black);
     text-align: center;
     transition: all .3s ease;
-    *cursor: pointer;
 }
 
 .project-button-close:active{
     transform: scale(1.1);
+}
+
+@media (max-width:768px) {
+    
+.project-button-close{
+    top: 20px;
+    line-height: 24px;
+    height: 24px;
+    width: 24px;
+}
 }
 
 /* ---------------- Main ---------------- */
@@ -774,5 +783,76 @@ html {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    /* padding: 1rem; */
+    *padding: 1rem;
+}
+
+.nav__a-selected{
+    color: var(--color-marron);
+}
+
+/* 
+    ///////////////////////////////////////////////////////////
+    //Imagenes
+    //Galery of Projects
+    ///////////////////////////////////////////////////////////
+*/
+.galery-card{
+    position: relative;
+    overflow: hidden;
+    transition: all .3s ease;
+}
+.galery-card img{
+    width: 100%;
+    transition: all .3s ease;
+}
+
+.galery-card:hover img{
+    transform: scale(1.1);
+}
+
+.galery-card__div{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    padding: 16px;
+    background-color: #fff9;
+    transform: translateY(100%);
+    display: grid;
+    place-content: center;
+    gap: 16px;
+    color: var(--color-blue-dark);
+    text-align: center;
+    font-family: 'monserrat-extraBold', sans-serif;
+    transition: all .3s ease;
+}
+
+.galery-card:hover .galery-card__div{
+    transform: translateY(0%);
+}
+
+.galery-card__figcaption{
+    font-size: 24px;
+}
+
+/* t-a-center */
+.t-a-center{
+    text-align: center;
+}
+
+.b-white{
+    background-color: var(--color-mode-black);
+}
+
+.f-f-Montserrat-b{
+    font-family: 'monserrat-Regular', sans-serif;
+}
+
+.card__img-sm{
+    display: block;
+    margin: 0 auto;
+    width: 50%;
+}
+
+.p-b-16{
+    padding-bottom: 16px;
 }
